force-app/main/default/objects/df_122_arvtagare_singel__c/df_122_arvtagare_singel__c.object-meta.xml
<CustomObject>
    <label>Arvtagare (Singel)</label>
    <nameField>
        <label>Arvtagare (Singel) Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Arvtagare (Singel)s</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>