force-app/main/default/objects/df_122_arvtagare_singel__c/fields/efternamn_arvatagare_singel__c.field-meta.xml
<CustomField>
    <fullName>efternamn_arvatagare_singel__c</fullName>
    <label>Efternamn</label>
    <length>255</length>
    <type>Text</type>
</CustomField>