force-app/main/default/objects/df_122_arvtagare_singel__c/fields/frnamn_arvatagare_singel__c.field-meta.xml
<CustomField>
    <fullName>frnamn_arvatagare_singel__c</fullName>
    <label>Förnamn</label>
    <length>255</length>
    <type>Text</type>
</CustomField>