force-app/main/default/objects/df_122_arvtagare_singel__c/fields/personnummer_arvatagare_singel__c.field-meta.xml
<CustomField>
    <fullName>personnummer_arvatagare_singel__c</fullName>
    <label>Personnummer</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>