force-app/main/default/objects/df_122_arvtagare_singel__c/fields/procent_arvatagare_singel__c.field-meta.xml
<CustomField>
    <fullName>procent_arvatagare_singel__c</fullName>
    <label>Procent</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>